# modulus-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/modulus_cli/: __init__.py  api_client.py  cli.py  config_store.py  constants.py  function_extractor.py  indexer.py  schemas.py  static_inventory.py  ui.py
